--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
       "last 1 safari version"
     ]
   },
+  "packageManager": "pnpm@8.3.1",
   "engines": {
     "node": ">=18",
     "pnpm": ">=7"
