--- a/.github/workflows/pr-review.yaml
+++ b/.github/workflows/pr-review.yaml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  prepare:
-    name: setup-runner
+  harden:
+    name: harden-runner
     runs-on: ubuntu-latest
 
     steps:
@@ -16,6 +16,12 @@ jobs:
         with:
           egress-policy: audit
 
+  prepare:
+    name: setup-runner
+    runs-on: ubuntu-latest
+    needs: harden
+
+    steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
@@ -48,5 +54,11 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
+  build:
+    name: build
+    runs-on: ubuntu-latest
+    needs: prepare
+    
+    steps:
       - name: Attempt Build
         run: pnpm run build
