--- a/.github/workflows/pr-review.yaml
+++ b/.github/workflows/pr-review.yaml
@@ -6,8 +6,8 @@ on:
       - main
 
 jobs:
-  harden:
-    name: harden-runner
+  prepare:
+    name: try-build
     runs-on: ubuntu-latest
 
     steps:
@@ -16,12 +16,6 @@ jobs:
         with:
           egress-policy: audit
 
-  prepare:
-    name: setup-runner
-    runs-on: ubuntu-latest
-    needs: harden
-
-    steps:
       - name: Checkout Repo
         uses: actions/checkout@v3
 
@@ -54,11 +48,5 @@ jobs:
       - name: Install Dependencies
         run: pnpm install
 
-  build:
-    name: build
-    runs-on: ubuntu-latest
-    needs: prepare
-    
-    steps:
       - name: Attempt Build
         run: pnpm run build
