--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,6 +21,8 @@ jobs:
 
       - name: Checkout Repo
         uses: actions/checkout@v4
+        with:
+          progress: false
 
       - name: Install pnpm
         uses: pnpm/action-setup@v2
