--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
-  "extends": ["config:base", "schedule:nonOfficeHours"],
+  "extends": [
+    "config:base", "schedule:nonOfficeHours", "helpers:pinGitHubActionDigests", ":gitSignOff"
+  ],
+  "pre-commit": {
+    "enabled": true
+  },
   "timezone": "Europe/London",
   "vulnerabilityAlerts": {
     "labels": ["security"],
